after integrating paymob

--- a/E-Commerce.Web/Views/Category/Create.cshtml
+++ b/E-Commerce.Web/Views/Category/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@model CategoryVM
+﻿@model CreateCategoryVM
 @{
     ViewData["Title"] = "Create";
-    Layout = "_CustomLayout";
+    Layout = "_DashboardLayout";
 }
 
 <div class="container mt-5">
