--- a/E-Commerce.Web/Views/Category/Edit.cshtml
+++ b/E-Commerce.Web/Views/Category/Edit.cshtml
@@ -1,13 +1,13 @@
-﻿@model CategoryVM
+﻿@model EditCategoryVM
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_CustomLayout.cshtml";
+    Layout = "_DashboardLayout";
 }
 
 <div class="container mt-5">
     <div class="card shadow-sm">
         <div class="card-header bg-primary text-white">
-            <h3 class="card-title mb-0">Create New Category</h3>
+            <h3 class="card-title mb-0">Edit Category @Model.Name</h3>
         </div>
         <div class="card-body">
             <form asp-controller="Category" method="post" enctype="multipart/form-data">
@@ -40,13 +40,13 @@
                             <label class="form-label">Image Preview:</label>
                             <div class="border rounded p-2" style="width:100%; height:150px; display:flex; align-items:center; justify-content:center; background-color:#f8f9fa;">
                                 <img class="imagePreview" src="/@Model.CurrentImage" style="max-width: 100%; max-height: 100%;" />
-                                <span class="no-image text-muted">No image selected</span>
+                                <span class="no-image text-muted d-none">No image selected</span>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <button type="submit" class="btn btn-success">Save Update</button>
+                <button type="submit" class="btn btn-success">Save Edit</button>
             </form>
         </div>
     </div>
