--- a/E-Commerce.Web/Views/Category/Index.cshtml
+++ b/E-Commerce.Web/Views/Category/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Categories";
-    Layout = "_CustomLayout";
+    Layout = "_DashboardLayout";
 }
 
 
@@ -67,7 +67,7 @@
                                         <a asp-action="Edit" asp-route-id="@category.Id" class="btn btn-warning btn-md mx-2">
                                             <i class="fa fa-edit"></i> Edit
                                         </a>
-                                        <a asp-action="Delete" asp-route-id="@category.Id" class="btn btn-danger btn-md">
+                                        <a href="#" data-name="Category"  data-id="@category.Id" class="btn btn-danger btn-md DeleteBtn">
                                             <i class="fa fa-trash"></i> Delete
                                         </a>
                                     </div>
