--- a/E-Commerce.Web/Views/Shared/_Layout.cshtml
+++ b/E-Commerce.Web/Views/Shared/_Layout.cshtml
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - E_Commerce.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <!-- Bootstrap icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link rel="stylesheet"  href="~/css/styles.css" />
+	<link rel="stylesheet" href="~/css/styles.css" />
+	<link rel="stylesheet" href="~/toastr.js/toastr.min.css" />
     <link rel="stylesheet" href="~/bootstrap-icons/font/bootstrap-icons.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    @*     <link rel="stylesheet" href="~/E_Commerce.Web.styles.css" asp-append-version="true" /> *@
+	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+	
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #0e5aa7;">
-            <div class="container-fluid p-2">
+            <div class="container-fluid py-1">
                 <a class="navbar-brand fw-bold fs-3" asp-controller="Home" asp-action="Index"><i class="bi bi-bag-heart"></i> E-Commerce</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,30 +62,31 @@
                         </a>
                     }
                     
-                    <button class="btn cartbtn fs-5 rounded-pill px-3 py-2">
+                    <a class="btn cartbtn fs-5 rounded-pill px-3 py-2" asp-controller="ShoppingCart" asp-action="Index">
                         <i class="bi bi-cart-fill me-1 fs-4"></i>
-                        Cart <span class="badge bg-light text-dark ms-1 rounded-pill text-danger">0</span>
-                    </button>
+                        Cart 
+                    </a>
 
 
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container " style="margin-top: 100px;">
+    <div class="container-fluid main-content" style="margin-top: 100px;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-dark mt-lg-5">
         <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
     </footer>
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="~/toastr.js/toastr.min.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
