--- a/E-Commerce.Web/wwwroot/css/site.css
+++ b/E-Commerce.Web/wwwroot/css/site.css
@@ -1,33 +1,36 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    height: 100%;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
+    html {
+        font-size: 16px;
+    }
 }
 
 body {
-  margin-bottom: 60px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.main-content {
+    flex: 1;
+}
+
+.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 .form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
-  color: var(--bs-secondary-color);
-  text-align: end;
+    color: var(--bs-secondary-color);
+    text-align: end;
 }
 
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
-  text-align: start;
+    text-align: start;
 }
 
 /*Custom edits*/
@@ -40,16 +43,22 @@ body {
     font-weight: 600;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
-.cartbtn:hover {
-    color: #f8f9fa !important;
-    background-color: #014886;
-}
+
+    .cartbtn:hover {
+        color: #f8f9fa !important;
+        background-color: #014886;
+    }
 
 input.input-validation-error {
     border-color: red;
 }
-input.input-validation-error ~ label,
-label.input-validation-error + label {
-    color: red;
-}
+
+    input.input-validation-error ~ label,
+    label.input-validation-error + label {
+        color: red;
+    }
+
+
+/* Toaster options */
