--- a/E-Commerce.Web/Views/_ViewImports.cshtml
+++ b/E-Commerce.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using E_Commerce.Web.Models
 @using E_Commerce.Web.ViewModels;
 @using E_Commerce.Domain.Entities;
+@using E_Commerce.Domain.Entities.Enums;
+@using E_Commerce.Infrastructure.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
