--- a/E-Commerce.Web/Views/Category/Index.cshtml
+++ b/E-Commerce.Web/Views/Category/Index.cshtml
@@ -89,7 +89,7 @@
                                                 }
                                                 @if (productCount > 0)
                                                 {
-                                                    <span class="badge bg-info fs-6">@productCount Products</span>
+                                                    <span class="badge bg-primary fs-6">@productCount Products</span>
                                                 }
                                                 else
                                                 {
