--- a/E-Commerce.Web/Views/Order/_OrderTable.cshtml
+++ b/E-Commerce.Web/Views/Order/_OrderTable.cshtml
@@ -1,6 +1,9 @@
-﻿@model List<OrderVM>
+﻿@model PagedResult<OrderVM>
+@{
+    int numberOfPages = (int)Math.Ceiling((double)Model.TotalCount / Model.PageSize);
+}
 <div class="container mt-5 mb-5 ">
-    @if (Model != null && Model.Any())
+    @if (Model.Items != null && Model.Items.Any())
     {
         <div class="table-responsive">
             <table class="table table-bordered table-hover align-middle text-center">
@@ -17,7 +20,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var vm in Model)
+                    @foreach (var vm in Model.Items)
                     {
                         string rowClass = vm.Order.Status switch
                         {
@@ -58,6 +61,20 @@
                 </tbody>
             </table>
         </div>
+        @if (numberOfPages > 1)
+        {
+            <nav>
+                <ul class="pagination justify-content-center">
+                    @for (int i = 1; i <= numberOfPages; i++)
+                    {
+                        <li class="page-item @(i == Model.PageNumber ? "active" : "")">
+                            <a href="#" class="page-link pagination-link"
+                               data-page="@i" data-pagesize="@Model.PageSize" data-filter="@ViewBag.SelectedFilter">@i</a>
+                        </li>
+                    }
+                </ul>
+            </nav>
+        }
     }
     else
     {
