--- a/E-Commerce.Web/Views/Shared/_Layout.cshtml
+++ b/E-Commerce.Web/Views/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
                         </li>
                     </ul>
 
-                    <form class="d-flex my-2 my-lg-0 me-4" asp-action="Search" asp-controller="Products" method="get">
+                    <form class="d-flex my-2 my-lg-0 me-4" asp-action="Search" asp-controller="Product" method="get">
                         <div class="input-group rounded-pill overflow-hidden" style="height: 38px; width: 500px;">
-                            <input type="text" class="form-control border-0" name="query" placeholder="Search..." />
+                            <input type="text" class="form-control border-0" name="query" placeholder="Search for products..." />
                             <button class="btn btn-light border-0" type="submit" style="background-color: #f8f9fa;">
                                 <i class="bi bi-search"></i>
                             </button>
