--- a/E-Commerce.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/E-Commerce.Web/Views/Shared/_DashboardLayout.cshtml
@@ -105,6 +105,14 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 Products
                             </a>
+                            <a class="nav-link" asp-controller="Account" asp-action="Index">
+                                <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                                Users
+                            </a>
+                            <a class="nav-link" asp-controller="Order" asp-action="Index">
+                                <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                                Orders
+                            </a>
                             <a class="nav-link" href="tables.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Tables
