--- a/E-Commerce.Web/Views/_ViewImports.cshtml
+++ b/E-Commerce.Web/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using E_Commerce.Domain.Entities;
 @using E_Commerce.Domain.Entities.Enums;
 @using E_Commerce.Infrastructure.Identity;
+@using E_Commerce.Application.Common
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
