--- a/E-Commerce.Web/Views/Shared/_Section.cshtml
+++ b/E-Commerce.Web/Views/Shared/_Section.cshtml
@@ -19,10 +19,10 @@
             <div class="mt-3 mb-5" style="height: 400px; width:240px;">
                 <div class="card product-card h-100 shadow-sm rounded-3 border-0 d-flex flex-column hover-shadow">
                     <a asp-action="Details" asp-controller="Product" asp-route-id="@product.Id"
-                       class="text-decoration-none text-dark flex-grow-1 d-flex flex-column">
+                    class="text-decoration-none text-dark flex-grow-1 d-flex flex-column">
                         <div style="position: relative; width: 240px; height: 220px;">
                             <img src="/@product.ImageUrl" class="card-img-top" alt="Product"
-                                 style="height: 220px; width: 240px; object-fit: cover;">
+                            style="height: 220px; width: 240px; object-fit: cover;">
                             <span class="badge bg-dark category-badge position-absolute top-0 start-0 m-2">
                                 @Model.Name
                             </span>
@@ -32,11 +32,15 @@
                             <h6 class="card-title">@product.Name</h6>
                         </div>
                     </a>
-                    <div class="p-3 pt-0">
-                        <button class="btn cartbtn w-100 AddToCart" data-id="@product.Id">
-                            <i class="bi bi-cart-fill me-2"></i> Add to Cart
-                        </button>
-                    </div>
+                    @if (!User.IsInRole("Admin"))
+                    {
+                        <div class="p-3 pt-0">
+                            <button class="btn cartbtn w-100 AddToCart" data-id="@product.Id">
+                                <i class="bi bi-cart-fill me-2"></i> Add to Cart
+                            </button>
+                        </div>
+                    }
+
                 </div>
             </div>
         }
